--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -22,6 +22,9 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+      with:
+        # don't use shallow checkout to determine an intermediary version correctly
+        fetch-depth: 0
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
