--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -37,4 +37,6 @@ jobs:
     - name: Run tests
       run: |
         pytest --doctest-modules
-    
+    - name: Run mypy
+      run: |
+        mypy --install-types --non-interactive .
