--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ build-backend = "setuptools.build_meta"
 line-length = 100
 skip-string-normalization = 1
 
+[tool.mypy]
+ignore_missing_imports = true
+
 [tool.isort]
 profile = "black"
 line_length = 100
