--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        # lowest, common (defaut ubuntu LTS), newest
+        # lowest, common (default ubuntu LTS), newest
         python-version: ["3.6", "3.8", "3.10"]
     steps:
     - uses: actions/checkout@v2
