--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,12 @@ dynamic = ["version"]
 description = "Simple RPC client for Odoo"
 readme = "README.md"
 keywords = ["odoo", "rpc"]
-license = {text = "MIT"}
+license = {text = "GNU Lesser General Public License v3 (LGPLv3)"}
 requires-python = ">=3.6"
 classifiers = [
     # https://pypi.org/pypi?%3Aaction=list_classifiers
     "Development Status :: 3 - Alpha",
-    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
+    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
     "Programming Language :: Python :: 3",
     "Framework :: Odoo",
 ]
