--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -36,7 +36,7 @@ jobs:
         pip install -r requirements.txt
     - name: Run pytest
       run: |
-        pytest --doctest-modules
+        pytest --doctest-modules -m "not runbot"
     - name: Run mypy
       run: |
         mypy --install-types --non-interactive .
