--- a/.github/workflows/python-lint-test.yml
+++ b/.github/workflows/python-lint-test.yml
@@ -13,11 +13,10 @@ jobs:
         python-version: "3.10"
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install --upgrade -e .[pinned,dev]
     - name: Run pre-commit checks
       run: |
-        ./pre-commit
+        ./pre-commit lint
   test:
     runs-on: ubuntu-latest
     strategy:
@@ -32,8 +31,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install dependencies
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
+        python -m pip install --upgrade -e .[pinned,dev,test]
     - name: Run pytest
       run: |
         pytest --doctest-modules -m "not runbot"
